syntax = "proto3";

option csharp_namespace = "CatalogService.Api.Protos";

service Catalog{
	rpc ReserveProduct(ReserveProductRequest) returns (ProductResponse);
	rpc ReleaseProduct(ReleaseProductRequest) returns (ProductResponse);
}
message ReserveProductRequest{
	string product_id = 1;
	int32 quantity = 2;
}

message ReleaseProductRequest{
	string product_id = 1;
	int32 quantity = 2;
}

message ProductResponse{
	string product_id = 1;
	string price = 2;
}